# autoresearch-modal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  analysis.ipynb  prepare.py  program.md  pyproject.toml  train.py
.agent/plans/autoresearch_modal/: PLAN_autoresearch_modal.md
.agent/tasks/autoresearch_modal/: TASK_01_autoresearch_modal.md  TASK_02_autoresearch_modal.md  TASK_03_autoresearch_modal.md  TASK_04_autoresearch_modal.md  TASK_05_autoresearch_modal.md
agent_sandbox/: __init__.py  autoresearch_app.py
agent_sandbox/autoresearch/: __init__.py  core.py
agent_sandbox/config/: __init__.py  settings.py
agent_sandbox/utils/: __init__.py
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  autoresearch-modal.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: index.md
docs/exec-plans/completed/autoresearch_agent_loop_modal/: PLAN_autoresearch_agent_loop_modal.md
docs/exec-plans/completed/autoresearch_agent_loop_modal/tasks/: TASK_01_autoresearch_agent_loop_modal.md  TASK_02_autoresearch_agent_loop_modal.md  TASK_03_autoresearch_agent_loop_modal.md
docs/exec-plans/completed/autoresearch_modal/: PLAN_autoresearch_modal.md
docs/exec-plans/completed/autoresearch_modal/tasks/: TASK_01_autoresearch_modal.md  TASK_02_autoresearch_modal.md  TASK_03_autoresearch_modal.md  TASK_04_autoresearch_modal.md  TASK_05_autoresearch_modal.md
docs/exec-plans/completed/autoresearch_vendored_layout_modal/: PLAN_autoresearch_vendored_layout_modal.md
docs/exec-plans/completed/autoresearch_vendored_layout_modal/tasks/: TASK_01_autoresearch_vendored_layout_modal.md  TASK_02_autoresearch_vendored_layout_modal.md  TASK_03_autoresearch_vendored_layout_modal.md
docs/product-specs/: autoresearch-modal.md  index.md
docs/references/: autoresearch-modal-runbook.md  index.md
scripts/: generate_db_schema.py
tests/: __init__.py  test_autoresearch_core.py  test_settings.py
