[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-modal"
version = "0.6.0"
description = "Thin Modal wrapper for karpathy/autoresearch with persistent workspaces and Claude-driven runs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agent_sandbox*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.10",
]
