[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-modal"
version = "0.2.0"
description = "Vendored karpathy/autoresearch plus a Modal runtime for persistent agent-driven experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "modal>=1.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[project.scripts]
autoresearch-modal = "cli.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agent_sandbox*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["analysis.ipynb", "prepare.py", "train.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.10",
]
